--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ navigation = [
 logos = [
 #   { alt_text = "CodeRefinery logo", target_url = "https://coderefinery.org/", image = "coderefinery.png" },
 #   { alt_text = "CodeRefinery logo", target_url = "https://coderefinery.org/", image = "coderefinery.png" }
-    { alt_text = "INES logo", target_url = "https://ines.org/", image = "ines.png" }
+    { alt_text = "INES logo", target_url = "https://www.noresm.org/", image = "ines.png" }
 ]
 
 # adapt this
