Include link to registration form.

--- a/config.toml
+++ b/config.toml
@@ -52,7 +52,7 @@ logos = [
 ]
 
 # adapt this
-registration_link = "https://example.org"
+registration_link = "https://skjemaker.app.uib.no/view.php?id=15292547"
 source_repo = "https://github.com/coderefinery/template-workshop-webpage"
 
 # uncomment as soon as registration opens
