--- a/config.toml
+++ b/config.toml
@@ -27,14 +27,14 @@ external_links_target_blank = true
 
 navigation = [
     { name = "About", target = "" },
-    #{ name = "List of exercises", target = "exercises/" },
+    { name = "List of exercises", target = "exercises/" },
     { name = "Audience", target = "audience/" },
     #{ name = "Certificates", target = "certificates/" },
-    #{ name = "How to join", target = "join/" },
+    { name = "How to join", target = "join/" },
     { name = "Requirements", target = "requirements/" },
-    #{ name = "Q&A", target = "questions/" },
-    #{ name = "Code of conduct", target = "code-of-conduct/" },
-    #{ name = "Communication", target = "communication/" }
+    { name = "Q&A", target = "questions/" },
+    { name = "Code of conduct", target = "code-of-conduct/" },
+    { name = "Communication", target = "communication/" }
 ]
 
 # twitter_image = "https://raw.githubusercontent.com/coderefinery/coderefinery-artwork/main/socialshare/socialshare-workshop.png"
