--- a/config.toml
+++ b/config.toml
@@ -27,13 +27,13 @@ external_links_target_blank = true
 
 navigation = [
     { name = "About", target = "" },
-    { name = "List of exercises", target = "exercises/" },
+    #{ name = "List of exercises", target = "exercises/" },
     { name = "Audience", target = "audience/" },
     #{ name = "Certificates", target = "certificates/" },
-    { name = "How to join", target = "join/" },
+    #{ name = "How to join", target = "join/" },
     { name = "Requirements", target = "requirements/" },
-    { name = "Q&A", target = "questions/" },
-    { name = "Code of conduct", target = "code-of-conduct/" },
+    #{ name = "Q&A", target = "questions/" },
+    #{ name = "Code of conduct", target = "code-of-conduct/" },
     { name = "Communication", target = "communication/" }
 ]
 
