--- a/content/schedule.yaml
+++ b/content/schedule.yaml
@@ -11,13 +11,40 @@ schedule:
     date: "2023-11-20"
     sessions:
       - starts: 9:00
+        ends: 9:20
+        title: Introduction to NorESM
+        presenters: TBA
+      - starts: 9:20
+        ends: 9:40
+        title: Introducing NorESM github and documentation Pages
+        presenters: TBA
+      - starts: 9:40
+        ends: 10:00
+        title: Getting the NorESM code
+        presenters: TBA
+      - starts: 10:00
+        ends: 10:15
+        title: break
+      - starts: 10:15
         ends: 11:00
-        title: Introduction to NorESM - part 1/4
+        title: Set up first experiment
         presenters: TBA
+      - starts: 11:00
+        ends: 12:00
+        title: lunch break
       - starts: 12:00
-        ends: 14:00
-        title: Introduction to NorESM - part 1/4 (cont.)
+        ends: 13:00
+        title: Exercise-1: Setup, build and run NorESM
+      - starts: 13:00
+        ends: 13:15
+        title: break
+      - starts: 13:15
+        ends: 13:40
+        title: First look on model output
         presenters: TBA
+      - starts: 13:40
+        ends: 14:00
+        title: Exercise-2: Exercise-2: Examine model output with ncview
   - title: "Day 2"
     date: "2023-11-21"
     sessions:
