--- a/content/schedule.yaml
+++ b/content/schedule.yaml
@@ -7,7 +7,7 @@ schedule:
       - starts: 12:00
         ends: 14:00
         title: Installation help for everybody
-  - title: "Day 1: Basic proceures."
+  - title: "Day 1: Basic procedures."
     date: "2023-11-20"
     goal: "Download NorESM; set up experiment; run model; view output"
     sessions:
