--- a/content/schedule.yaml
+++ b/content/schedule.yaml
@@ -129,7 +129,14 @@ schedule:
         presenters: TBA
   - title: "Day 4: NorESM model development."
     date: "2023-11-28"
-    #locations:
+    locations:
+      - location: "Bergen"
+        room: "UiB, Geofysisk Institutt, U105"
+      - location: "Oslo"
+        room: "UiO, Geologibygningen, Mellomrommet 102"
+        url: "https://link.mazemap.com/9mbRkBaK"
+      - location: "Tromsø"
+        room: "UiT, Institutt for Geovitenskap, rom 2.120, Nunataken"
     sessions:
       - starts: 9:00
         ends: 11:00
